Fixed message box not wrapping long text

--- a/src/client/src/components/Chat/chat.css
+++ b/src/client/src/components/Chat/chat.css
@@ -91,7 +91,7 @@
     padding: 0.5em 1em;
     background-color: #fff;
     border-radius: 0.5em;
-    width: fit-content;
+    word-wrap: break-word;
     max-width: 20em;
     font-size: 1em;
 } 
